--- a/post.html
+++ b/post.html
@@ -105,9 +105,9 @@
                 <div class="menu-icon" data-dsn="parallax" data-dsn-move="5">
                     <div class="icon-m">
                         <i class="menu-icon-close fas fa-times"></i>
-                        <span class="menu-icon__line menu-icon__line-left"></span>
-                        <span class="menu-icon__line"></span>
                         <span class="menu-icon__line menu-icon__line-right"></span>
+                        <span class="menu-icon__line"></span>
+                        <span class="menu-icon__line menu-icon__line-left"></span>
                     </div>
 
                     <div class="text-menu">
@@ -397,7 +397,7 @@
                             <a href="tel:010" class="phone">012.345.6789</a>
                             <a href="#" class="email">info@dsngrid</a>
                         </div>
-                        <div class="copyright-social">
+                        <div class="copyleft-social">
                             <p>© 2019 Design Grid</p>
                             <ul>
                                 <li><a href="#" target="_blank">Instagram</a></li>
